update jekyll's url property to fix asset paths in web page

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -5,3 +5,6 @@ plugins:
 title: OdbDesign ODB++ Parser
 description: REST API and C++ library for parsing ODB++ Design archives
 show_downloads: false
+
+url: https://source.odbdesignserver.com
+#baseurl: /jekyll-blog-demo
