feat: add Crow library dependency to Utils CMake configuration

--- a/Utils/CMakeLists.txt
+++ b/Utils/CMakeLists.txt
@@ -19,3 +19,7 @@ target_include_directories(Utils
 # Link to LibArchive
 find_package(LibArchive REQUIRED)
 target_link_libraries(Utils PRIVATE LibArchive::LibArchive)
+
+# Link to Crow (needed for crow_win.h)
+find_package(Crow CONFIG REQUIRED)
+target_link_libraries(Utils PRIVATE Crow::Crow)
