Added a comment to clarify that test discovery is deferred to CTest time to avoid executing the test binary during the build process, preventing potential build failures. The `gtest_discover_tests` function is now set to use `DISCOVERY_MODE PRE_TEST`.

--- a/OdbDesignTests/CMakeLists.txt
+++ b/OdbDesignTests/CMakeLists.txt
@@ -26,7 +26,10 @@ target_link_libraries(OdbDesignTests PRIVATE GTest::gtest_main GTest::gmock_main
 target_link_libraries(OdbDesignTests PRIVATE OdbDesign)
 
 include(GoogleTest)
-gtest_discover_tests(OdbDesignTests)
+# Defer test discovery to ctest time to avoid executing the test binary during build
+# This prevents build failures when runtime dependencies or environment variables
+# are not yet available at link/post-build time.
+gtest_discover_tests(OdbDesignTests DISCOVERY_MODE PRE_TEST)
 
 ## PCH
 #if (NOT DEFINED ENV{CI})
